[tool.poetry]
name = "coffee_shop"
version = "0.1.0"
description = ""
authors = ["Martin Matousek"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.3"
requests = "^2.24.0"
tinydb = "^4.2.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
